# NCBI-Async-Downloader

./: .coverage  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: benchmark.yml  chaos.yml  combat-benchmark.yml  python-bench.yml  tests.yml
src/: main.py
src/download/: GCF_000001405.40_GRCh38.p14_assembly_stats.txt
src/hydrastream/: __init__.py  _curl_shim.py  constants.py  dispatcher.py  engine.py  exceptions.py  facade.py  interfaces.py  main.py  models.py  monitor.py  network.py  producer.py  providers.py  storage.py  utils.py
src/hydrastream/actors/: aggregator.py  analyzer.py  autosaver.py  controller.py  dispatcher.py  feeder.py  memory_throttler.py  resolver.py  stater.py  streamer.py  throttler.py  worker.py  writer.py
src/ncbiloader/: __init__.py  loader.py  main.py  models.py  monitor.py  network.py  providers.py  storage.py
src/test/: test_loader.py  test_models.py  test_path.py
tests/: test_dispatcher.py  test_e2e.py  test_engine.py  test_facade_main.py  test_loader.py  test_models.py  test_monitor.py  test_network.py  test_path.py  test_providers.py  test_storage.py
