[project]
name = "ncbiloader"
version = "0.1.0"
license = {text = "MIT"}
description = "High-performance asynchronous downloader for NCBI datasets using HTTP/2 and in-memory streaming."
authors = [
    { name = "Valentin Zhukovetski", email = "zukovetski@gmail.com" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiolimiter>=1.2.1",
    "biopython>=1.86",
    "httpx[http2]>=0.28.1",
    "loguru>=0.7.3",
    "orjson>=3.11.7",
    "pydantic>=2.12.5",
    "rich>=14.3.2",
    "typer>=0.24.1",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "icecream>=2.1.10",
    "pip-licenses>=5.5.1",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]

[tool.uv]
package = true

[tool.setuptools.package-dir]
"" = "src"

[tool.uv.sources]
ncbiloader = { workspace = true }

[tool.ruff]
# Указываем Ruff, где искать исходники для корректной сортировки импортов
src = ["src"]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E", "W",  # pycodestyle
    "F",       # pyflakes
    "I",       # isort
    "UP",      # pyupgrade
    "B",       # bugbear
    "SIM",     # simplify
    "C901",    # complex-structure
    "ANN",     # annotations
    "PTH",     # use-pathlib
    "RET",     # return-statements
    "RUF",     # ruff-specific
    "N",       # pep8-naming
]
fixable = ["ALL"]

ignore = [
    "RUF001", # Проверка кириллических букв в строках
    "RUF002", # Проверка кириллических букв в докстрингах
    "RUF003", # Проверка кириллических букв в комментариях (твой случай)
     "C901",
     "W293",   # Blank line contains whitespace
]

[tool.ruff.format]
# Использовать двойные кавычки (стандарт Black) или одинарные
quote-style = "double"

# Использовать пробелы вместо табуляции
indent-style = "space"

# Автоматически определять перенос строк (LF или CRLF)
line-ending = "auto"

# Автоматическое форматирование кода в docstrings
docstring-code-format = true

# Пропускать форматирование строк в коде (если нужно оставить как есть)
skip-magic-trailing-comma = false

preview = true # Включает экспериментальные улучшения форматировани

[tool.ruff.lint.pydocstyle]
convention = "google" # Или "numpy", определяет стиль документации

[tool.ruff.lint.mccabe]
max-complexity = 10 # Порог сложности функции (C901)

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ANN"]

[tool.pyright]

# Включаем анализ папки src
include = ["src"]
# Сообщаем Pyright, что src — это корень с исходным кодом
executionEnvironments = [
  { root = "src" }
]
# Настройки виртуального окружения для uv
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"
