[project]
name = "hydrastream"
version = "1.0.0"
license = {text = "MIT"}
description = "A high-performance, fault-tolerant, and streaming-capable async downloader."
authors =[
    { name = "Valentin Zhukovetski", email = "zukovetski@gmail.com" }
]
keywords =["async", "streaming", "download", "bioinformatics", "resilience", "uvloop", "httpx"]
classifiers =[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: System :: Networking",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
readme = "README.md"
requires-python = ">=3.11"
dependencies =[
    "aiolimiter>=1.2.1",
    "httpx[http2]>=0.28.1",
    "orjson>=3.11.7",
    "rich>=14.3.2",
    "typer>=0.24.1",
    "uvloop>=0.22.1 ; sys_platform != 'win32'",
]

[build-system]
requires =["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev =[
    "bandit>=1.9.4",
    "icecream>=2.1.10",
    "pip-licenses>=5.5.1",
    "pre-commit>=4.5.1",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "respx>=0.22.0",
    "ruff>=0.15.1",
]

[project.scripts]
hydrastream = "hydrastream.main:app"
hstream = "hydrastream.main:app"
hs = "hydrastream.main:app"

[project.urls]
Homepage = "https://github.com/Zhukovetski/HydraStream"
Repository = "https://github.com/Zhukovetski/HydraStream"
Issues = "https://github.com/Zhukovetski/HydraStream/issues"

[tool.setuptools.dynamic]
version = {attr = "hydrastream.__init__.__version__"}

[tool.uv]
package = true

[tool.setuptools.packages.find]
where =["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.uv.sources]
hydrastream = { workspace = true }

[tool.ruff]
src = ["src"]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select =[
    "E", "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "C901",
    "ANN",
    "PTH",
    "RET",
    "RUF",
    "N",
]
fixable =["ALL"]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
skip-magic-trailing-comma = false
preview = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
#"tests/**/*" = ["ANN"]

[tool.pyright]
include = ["src"]
#ignore = ["tests"]
venvPath = "."
venv = ".venv"
typeCheckingMode = "strict"

executionEnvironments =[
    { root = "src/tests", reportPrivateUsage = "none" },
    { root = "src" }
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"
pythonpath = ["src"]

[tool.bandit]
exclude_dirs = ["tests", "features"]
tests = ["B201", "B301"]
