# ==============================================================================
# ОСНОВНЫЕ МЕТАДАННЫЕ ПРОЕКТА
# Этот блок читает PyPI (pip) при установке пакета.
# ==============================================================================
[project]
name = "hydrastream"
version = "1.1.0"
license = {text = "MIT"}
description = "Concurrent HTTP downloader with in-memory stream reordering (httpx + uvloop)."
authors =[
    { name = "Valentin Zhukovetski", email = "zukovetski@gmail.com" }
]
# Теги для поиска на PyPI.
keywords =[
    "async",
    "streaming",
    "multiplexing",
    "download",
    "in-memory",
    "bioinformatics",
    "data-engineering",
    "mlops",
    "aimd",
    "uvloop"
]
# Классификаторы помогают алгоритмам PyPI понять, для кого этот пакет и где он работает.
classifiers =[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]
readme = "README.md"

# Минимальная версия Python.
# Крайне важно для нас, так как архитектура завязана на DOD и оптимизированные dataclasses из 3.11+
requires-python = ">=3.11"

# Продовые зависимости (то, что скачается у пользователя при установке).
dependencies =[
    "aiolimiter>=1.2.1",                 # Для алгоритма AIMD и rate-лимитов
    "curl-cffi>=0.15.0",              # Асинхронный HTTP-клиент с поддержкой HTTP/2 (>=0.15.0 fixes CVE-2026-33752 SSRF via redirects)
    "orjson>=3.11.7",                    # Ультра-быстрый парсер JSON (написан на Rust)
    "pygments>=2.20.0",                  # Transitive via rich; pinned to avoid CVE-2026-4539 (ReDoS in AdlLexer)
    "rich>=14.3.2",                      # Отрисовка красивых прогресс-баров в консоли
    "typer>=0.24.1",                     # Для создания CLI-интерфейса (парсинг аргументов)
    "uvloop>=0.22.1 ; sys_platform != 'win32'", # Сверхбыстрый event-loop для asyncio (не ставим на Windows)
]

# ==============================================================================
# СИСТЕМА СБОРКИ
# ==============================================================================
[build-system]
# Используем uv (написан на Rust) вместо медленного setuptools для сборки пакета
requires =["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

# ==============================================================================
# ЗАВИСИМОСТИ ДЛЯ РАЗРАБОТКИ (НЕ идут в прод пользователю)
# ==============================================================================
[dependency-groups]
dev =[
    "bandit>=1.9.4",       # Поиск уязвимостей в безопасности кода
    "hypothesis>=6.151.10",
    "icecream>=2.1.10",    # Удобный дебаг-принт (ic() вместо print())
    "pip-licenses>=5.5.1", # Проверка лицензий зависимостей
    "pre-commit>=4.5.1",   # Хуки перед коммитом (чтобы говнокод не улетел в гит)
    "pyright>=1.1.408",    # Строгий статический анализатор типов от Microsoft
    "pytest>=9.0.3",       # Фреймворк для тестов (>=9.0.3 fixes CVE-2025-71176: /tmp/pytest-of-{user} symlink attack)
    "pytest-asyncio>=1.3.0", # Плагин pytest для тестирования async-функций
    "pytest-cov>=7.0.0",   # Замер покрытия кода тестами (coverage)
    "pytest-httpserver>=1.1.5",
    "pytest-mock>=3.15.1",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.1",        # Ультра-быстрый линтер и форматтер на Rust (заменяет flake8, black, isort)
]

# ==============================================================================
# CLI-КОМАНДЫ (ТОЧКИ ВХОДА)
# ==============================================================================
# Что пользователь пишет в консоли = "где лежит функция:имя переменной приложения"
[project.scripts]
hydrastream = "hydrastream.main:app"
hstream = "hydrastream.main:app"
hs = "hydrastream.main:app"  # Короткий и самый удобный алиас

# Ссылки, которые будут красиво отображаться сбоку на странице PyPI
[project.urls]
Homepage = "https://github.com/Zhukovetski/HydraStream"
Repository = "https://github.com/Zhukovetski/HydraStream"
Issues = "https://github.com/Zhukovetski/HydraStream/issues"

# ==============================================================================
# НАСТРОЙКИ СБОРКИ (SETUPTOOLS / UV)
# ==============================================================================
# Динамически тянем версию из __init__.py, чтобы не менять её в двух местах руками
[tool.setuptools.dynamic]
version = {attr = "hydrastream.__init__.__version__"}

[tool.uv]
package = true
dev-dependencies = [
    "hydrastream",
]

# Указываем, что весь наш исходный код лежит в папке src/
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.uv.sources]
hydrastream = { workspace = true }

# ==============================================================================
# НАСТРОЙКИ ЛИНТЕРА RUFF (Проверка качества кода)
# ==============================================================================
[tool.ruff]
src = ["src"]
line-length = 88         # Максимальная длина строки (стандарт Black)
target-version = "py311" # Оптимизируем код под фичи Python 3.11+

[tool.ruff.lint]
# Включаем жесткие наборы правил проверок:
select =[
    "E", "W",    # Базовые ошибки и предупреждения (pycodestyle)
    "F",         # Логические ошибки (Pyflakes), напр. неиспользуемые импорты
    "I",         # Сортировка импортов (isort)
    "UP",        # Апгрейд синтаксиса (pyupgrade) - заставляет юзать новые фичи языка
    "B",         # Поиск частых багов (flake8-bugbear)
    "SIM",       # Упрощение кода (flake8-simplify) - подсказывает как написать короче
    "C901",      # Проверка на цикломатическую сложность
    "ANN",       # Проверка наличия аннотаций типов
    "PTH",       # Заставляет использовать pathlib вместо старого os.path
    "RET",       # Проверки return (flake8-return)
    "RUF",       # Собственные жесткие правила Ruff
    "N",         # Проверка имен переменных/классов (pep8-naming)
    "C90",       # mccabe сложность
    "PL"         # Pylint (очень строгий анализатор)
]

# Разрешаем ruff автоматически исправлять найденные косяки при запуске --fix
fixable =["ALL"]

# PLR2004 - игнорим предупреждения про "магические числа" (иногда цифры в коде это нормально)
ignore = [
    "PLR2004",
    "RUF001", # String contains ambiguous unicode character (cyrillic)
    "RUF002", # Docstring contains ambiguous unicode character
    "RUF003", # Comment contains ambiguous unicode character
]
[tool.ruff.format]
quote-style = "double"           # Всегда используем двойные кавычки " "
indent-style = "space"           # Отступы пробелами
line-ending = "auto"
docstring-code-format = true     # Форматировать примеры кода внутри докстрингов
skip-magic-trailing-comma = false
preview = true
[tool.ruff.lint.pydocstyle]
convention = "google"            # Стиль докстрингов по стандарту Google

[tool.ruff.lint.mccabe]
max-complexity = 10              # Макс. количество ветвлений (if/elif/for) в одной функции. Больше 10 = рефакторинг.

[tool.ruff.lint.pylint]
max-args = 6                     # Не больше 6 аргументов у функции
max-statements = 50              # Не больше 50 строк кода в одной функции
max-branches = 12                # Чуть более мягкий лимит на ветвления для pylint

[tool.ruff.lint.per-file-ignores]
# Исключения для конкретных файлов
"tests/*" = ["S101", "D", "PLR2004"]
"src/hydrastream/interfaces.py" = ["ANN401"]
# Игнорим лимит на кол-во аргументов (PLR0913) в main.py и facade.py,
# так как там собираются параметры из CLI, их всегда много.
"src/hydrastream/main.py" = ["PLR0913"]
"src/hydrastream/facade.py" = ["PLR0913"]

# ==============================================================================
# НАСТРОЙКИ ТИПИЗАЦИИ (PYRIGHT)
# ==============================================================================
[tool.pyright]
include = ["src"]
# Это заставляет Pylance считать 'src' корнем для импортов
extraPaths = ["src"]
# Указываем путь к виртуальному окружению относительно корня
venvPath = "."
venv = ".venv"
# На время отладки снизьте строгость, чтобы увидеть, появятся ли подсказки
typeCheckingMode = "basic"
# ==============================================================================
# НАСТРОЙКИ ТЕСТОВ (PYTEST)
# ==============================================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"                            # Автоматически понимать, что async def test_... это асинхронный тест
asyncio_default_fixture_loop_scope = "function"  # Каждому тесту - свой свежий event loop
# Запускаем тесты с замером покрытия кода.
# --cov-fail-under=90 означает, что CI упадет с ошибкой, если покрыто меньше 90% кода!
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90"
pythonpath = ["src"]                             # Чтобы pytest видел наши модули при импорте
filterwarnings = [
    "ignore:chunk_size is ignored:UserWarning",
    "ignore:.*chunk_size is ignored.*",
]
# ==============================================================================
# НАСТРОЙКИ БЕЗОПАСНОСТИ (BANDIT)
# ==============================================================================
[tool.bandit]
# Не ищем уязвимости в тестовых файлах (там часто используются хаки и assert'ы)
exclude_dirs = ["tests", "features"]
# ВАЖНО: используем `skips`, а не `tests`. `tests = [...]` означает
# "запускать ТОЛЬКО эти проверки", что раньше молча отключало весь bandit.
# skips = список проверок, которые мы сознательно игнорируем.
# B101: assert используется как defensive type-hint для pyright (main.py).
# B311: random используется только для jitter/backoff, не для криптографии.
# B404/B603: subprocess в scripts/benchmark.py вызывается с захардкоженным argv,
#            без shell=True и без user input.
skips = ["B101", "B311", "B404", "B603"]
